refactor: response presenter and other
